--- a/TODO.txt
+++ b/TODO.txt
@@ -14,11 +14,18 @@ Collision Detection
             generate list of unique entity pairs 
                 n(n-1) / 2 unique pairs 
             give each entity a typeid
-            vox1.getGlobalBounds().intersects(vox2.getGlobalBounds())
-            once collision detected -> how to propagate change to individual
-            voxels?
-
-  quadtree - if needed for speed
+            once collision detected -> propagate change to entities by calling
+            their collideWith method with a voxel identifier
+  speed ups
+            -1. profile code
+            0. what is current count of voxels per entity type involved in collision checks?
+            1. use a spatial data structure
+                how to check collisions with wall when wall position doesn't
+                mean much
+            2. only check collisions on surface voxels?
+                a. maintain a data structure that holds weak ptrs to surface
+                   voxels of each entity only
+            3. do collision checks on a separate thread
 
 Game Entity Management
     Components
